--- a/wp-content/themes/followandrew/style.css
+++ b/wp-content/themes/followandrew/style.css
@@ -1,9 +1,9 @@
 /* 
-Theme Name: FollowAndrew
-Text Domain: FollowAndrew
+Theme Name: AlecMartin
+Text Domain: AlecMartin
 Version: 1.0
-Description: Fancy left sidebar theme
-Tags: left-sidebar, responsive, fancy
-Author: Andrew Wilson
-Author URI: https://youtube.com/followandrew
+Description: Custom Portfolio
+Tags: Design, Portfolio, Web
+Author: Alec Martin
+Author URI: 
 */
