--- a/wp-content/themes/followandrew/assets/css/style.css
+++ b/wp-content/themes/followandrew/assets/css/style.css
@@ -40,13 +40,6 @@
     font-style: italic;
 }
 
-h1{
-    font-family: 'Cooper Hewitt', sans-serif;
-    font-weight: 800;
-    text-transform: uppercase;
-    font-size: 130px;
-}
-
 :root {
     --off-white: #F6F2EF;
     --dark-green: #0C2927;
@@ -70,6 +63,32 @@ body{
     font-family: inter, sans-serif;
 }
 
+h1{
+    font-family: 'Cooper Hewitt', sans-serif;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 130px;
+}
+
+h2{
+    font-family: 'Cooper Hewitt', sans-serif;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 50px;
+}
+
+.project-details h3{
+    font-family: inter, sans-serif;
+    font-weight: 400;
+
+}
+
+h3{
+    font-family: 'Cooper Hewitt', sans-serif;
+    font-weight: 400;
+    font-size: 35px;
+}
+
 #header-name{
     margin-right: 100px;
 }
@@ -78,6 +97,8 @@ body{
     display: flex;
     gap: 40px;
     text-transform: uppercase;
+    font-family: 'Cooper Hewitt', sans-serif;
+    font-weight: bold;
 
 }
 
@@ -97,6 +118,8 @@ body{
     background-color: #0C2927;
     color: var(--off-white);
     font-size: 30px;
+    font-family: 'Cooper Hewitt', sans-serif;
+    font-weight: bold;
 }
 
 .footer a{
@@ -104,3 +127,12 @@ body{
     color: var(--bright-green);
 }
 
+.footer a:hover{
+    text-decoration: none;
+    color: var(--off-white);
+}
+
+.nav-footer{
+    list-style-type: none;
+    text-transform: uppercase;
+}
